initial commit with user defined strategy and backtesting working. Fixed bug in update account history and updated api spec
